--- a/package.json
+++ b/package.json
@@ -21,13 +21,19 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@headlessui/react": "^1.7.18",
+    "aos": "^2.3.4",
     "clsx": "^2.0.0",
+    "date-fns": "^3.6.0",
+    "gray-matter": "^4.0.3",
     "next": "^14.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "remark": "^15.0.1",
+    "remark-html": "^16.0.1",
     "tailwind-merge": "^2.1.0"
   },
   "devDependencies": {
+    "@types/aos": "^3.0.7",
     "@commitlint/cli": "^16.3.0",
     "@commitlint/config-conventional": "^16.2.4",
     "@svgr/webpack": "^8.1.0",
